# saleor-app-framework-python

./: Makefile  mkdocs.yml  pyproject.toml
src/saleor_app/: endpoints.py  webhook.py
src/saleor_app/schemas/: handlers.py  manifest.py  utils.py  webhook.py
src/saleor_app/tests/: conftest.py  test_endpoints.py
